--- a/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
@@ -237,9 +237,9 @@ public class {{classname}} {
         if (localVarResponse.statusCode()/ 100 != 2) {
           throw getApiException("{{operationId}}", localVarResponse);
         }
-        {{#returnType}}
+        {{#vendorExtensions.x-java-text-plain-string}}
+        // for plain text response
         InputStream responseBody = localVarResponse.body();
-        // for plain text reponse
         if (localVarResponse.headers().map().containsKey("Content-Type") &&
                 "text/plain".equalsIgnoreCase(localVarResponse.headers().map().get("Content-Type").get(0))) {
           java.util.Scanner s = new java.util.Scanner(responseBody).useDelimiter("\\A");
@@ -249,18 +249,19 @@ public class {{classname}} {
                   localVarResponse.headers().map(),
                   responseBodyText
           );
+        } else {
+            throw new RuntimeException("Error! The response Content-Type is supposed to be `text/plain` but it's not: " + localVarResponse);
         }
-        {{/returnType}}
-        return new ApiResponse<{{{returnType}}}{{^returnType}}Void{{/returnType}}>(
+        {{/vendorExtensions.x-java-text-plain-string}}
+        {{^vendorExtensions.x-java-text-plain-string}}
+        {{#returnType}}InputStream responseBody = localVarResponse.body();
+        {{/returnType}}return new ApiResponse<{{{returnType}}}{{^returnType}}Void{{/returnType}}>(
           localVarResponse.statusCode(),
           localVarResponse.headers().map(),
-          {{#returnType}}
-          responseBody == null || responseBody.available() < 1 ? null : memberVarObjectMapper.readValue(responseBody, new TypeReference<{{{returnType}}}>() {}) // closes the InputStream
-          {{/returnType}}
-          {{^returnType}}
-          null
-          {{/returnType}}
+          {{#returnType}}responseBody == null || responseBody.available() < 1 ? null : memberVarObjectMapper.readValue(responseBody, new TypeReference<{{{returnType}}}>() {}) // closes the InputStream{{/returnType}}
+          {{^returnType}}null{{/returnType}}
         );
+        {{/vendorExtensions.x-java-text-plain-string}}
       } finally {
         {{^returnType}}
         // Drain the InputStream
