--- a/modules/openapi-generator/src/main/resources/go/client.mustache
+++ b/modules/openapi-generator/src/main/resources/go/client.mustache
@@ -414,7 +414,9 @@ func (c *APIClient) prepareRequest(
 		// add context to the request
 		localVarRequest = localVarRequest.WithContext(ctx)
 
-        {{#isOAuth}}
+		// Walk through any authentication.
+
+        {{#hasOAuthMethods}}
 		// OAuth2 authentication
 		if tok, ok := ctx.Value(ContextOAuth2).(oauth2.TokenSource); ok {
 			// We were able to grab an oauth2 token from the context
@@ -425,19 +427,22 @@ func (c *APIClient) prepareRequest(
 
 			latestToken.SetAuthHeader(localVarRequest)
 		}
-		{{/isOAuth}}
-        {{#isBasicBasic}}
+
+        {{/hasOAuthMethods}}
+        {{#hasHttpBasicMethods}}
 		// Basic HTTP Authentication
 		if auth, ok := ctx.Value(ContextBasicAuth).(BasicAuth); ok {
 			localVarRequest.SetBasicAuth(auth.UserName, auth.Password)
 		}
-        {{/isBasicBasic}}
-        {{#isBasicBearer}}
+
+        {{/hasHttpBasicMethods}}
+        {{#hasHttpBearerMethods}}
 		// AccessToken Authentication
 		if auth, ok := ctx.Value(ContextAccessToken).(string); ok {
 			localVarRequest.Header.Add("Authorization", "Bearer "+auth)
 		}
-        {{/isBasicBearer}}
+
+        {{/hasHttpBearerMethods}}
 		{{#withAWSV4Signature}}
 		// AWS Signature v4 Authentication
 		if auth, ok := ctx.Value(ContextAWSv4).(AWSv4); ok {
