Creates first version of API Generator for Jetbrains Client

--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
@@ -1,11 +1,14 @@
 ## {{classname}}
 
 {{#operations}}
-{{#operation}}
-### {{#summary}}{{summary}}{{/summary}}
-# {{operationId}}
-{{httpMethod}} {{basePath}}{{#lambda.doubleMustache}}{{path}}{{/lambda.doubleMustache}}
 
+{{#operation}}
+
+### {{#summary}}{{summary}}{{/summary}}
+# @name {{operationId}}
+{{httpMethod}} {{basePath}}{{#lambda.doubleMustache}}{{path}}{{/lambda.doubleMustache}}
+{{#consumes}}Content-Type: {{{mediaType}}}{{/consumes}}
 
 {{/operation}}
+
 {{/operations}}
