Adds minimal set of values in env file`

--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/http-client.env.json.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/http-client.env.json.mustache
@@ -1,5 +1,7 @@
 {
   "dev" : {
-
+    {{#distinctPathParameters}}    "{{paramName}}": "test",
+    {{/distinctPathParameters}}
+    "todo": "remove last comma"
   }
 }
