--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_doc_example.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_doc_example.mustache
@@ -8,10 +8,10 @@ from pprint import pprint
 {{> python_doc_auth_partial}}
 # Enter a context with an instance of the API client
 {{#hasAuthMethods}}
-with {{{packageName}}}.ApiClient(configuration) as api_client:
+{{#asyncio}}async {{/asyncio}}with {{{packageName}}}.ApiClient(configuration) as api_client:
 {{/hasAuthMethods}}
 {{^hasAuthMethods}}
-with {{{packageName}}}.ApiClient() as api_client:
+{{#asyncio}}async {{/asyncio}}with {{{packageName}}}.ApiClient() as api_client:
 {{/hasAuthMethods}}
     # Create an instance of the API class
     api_instance = {{{packageName}}}.{{{classname}}}(api_client)
@@ -23,7 +23,7 @@ with {{{packageName}}}.ApiClient() as api_client:
         {{#summary}}
         # {{{.}}}
         {{/summary}}
-        {{#returnType}}api_response = {{/returnType}}api_instance.{{{operationId}}}({{#allParams}}{{#required}}{{paramName}}{{/required}}{{^required}}{{paramName}}={{paramName}}{{/required}}{{^-last}}, {{/-last}}{{/allParams}})
+        {{#returnType}}api_response = {{/returnType}}{{#asyncio}}await {{/asyncio}}api_instance.{{{operationId}}}({{#allParams}}{{#required}}{{paramName}}{{/required}}{{^required}}{{paramName}}={{paramName}}{{/required}}{{^-last}}, {{/-last}}{{/allParams}})
         {{#returnType}}
         print("The response of {{classname}}->{{operationId}}:\n")
         pprint(api_response)
