MOX-6756 add multi-session libcurl support

--- a/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.h.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.h.mustache
@@ -42,6 +42,7 @@ typedef struct apiClient_t {
     {{/isApiKey}}
     {{/authMethods}}
     {{/hasAuthMethods}}
+    CURL *curl_handle;
 } apiClient_t;
 
 apiClient_t* apiClient_create();
