--- a/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.c.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.c.mustache
@@ -16,6 +16,7 @@ apiClient_t *apiClient_create() {
     apiClient->progress_func = NULL;
     apiClient->progress_data = NULL;
     apiClient->response_code = 0;
+    apiClient->curl_handle = NULL;
     {{#hasAuthMethods}}
     {{#authMethods}}
     {{#isBasic}}
@@ -63,6 +64,7 @@ apiClient_t *apiClient_create_with_base_path(const char *basePath
     apiClient->progress_func = NULL;
     apiClient->progress_data = NULL;
     apiClient->response_code = 0;
+    apiClient->curl_handle = NULL;
     {{#hasAuthMethods}}
     {{#authMethods}}
     {{#isBasic}}
@@ -92,6 +94,10 @@ apiClient_t *apiClient_create_with_base_path(const char *basePath
 }
 
 void apiClient_free(apiClient_t *apiClient) {
+    if(apiClient->curl_handle) {
+        curl_easy_cleanup(apiClient->curl_handle);
+        apiClient->curl_handle = NULL;
+    }
     if(apiClient->basePath) {
         free(apiClient->basePath);
     }
@@ -343,6 +349,11 @@ void apiClient_invoke(apiClient_t    *apiClient,
     CURL *handle = curl_easy_init();
     CURLcode res;
 
+    if(apiClient->curl_handle == NULL) {
+        apiClient->curl_handle = curl_easy_init();
+    }
+    handle = apiClient->curl_handle;
+
     if(handle) {
         listEntry_t *listEntry;
         curl_mime *mime = NULL;
@@ -436,7 +447,6 @@ void apiClient_invoke(apiClient_t    *apiClient,
                             fprintf(stderr, "%s.%d: ERROR ran out of room for parameters %s=%s\n", 
                                     __func__, __LINE__, keyPair->key, keyPair->value);
                             free(formString);
-                            curl_easy_cleanup(handle);
                             return;
                         }
                         strncat(formString, "=", parameterLength);
@@ -445,7 +455,6 @@ void apiClient_invoke(apiClient_t    *apiClient,
                             fprintf(stderr, "%s.%d: ERROR ran out of room for parameters %s=%s\n", 
                                     __func__, __LINE__, keyPair->key, keyPair->value);
                             free(formString);
-                            curl_easy_cleanup(handle);
                             return;
                         }
                         strncat(formString, keyPair->value, parameterLength);
@@ -454,7 +463,6 @@ void apiClient_invoke(apiClient_t    *apiClient,
                             fprintf(stderr, "%s.%d: ERROR ran out of room for parameters %s=%s\n", 
                                     __func__, __LINE__, keyPair->key, keyPair->value);
                             free(formString);
-                            curl_easy_cleanup(handle);
                             return;
                         }
                         if(listEntry->nextListEntry != NULL)
@@ -465,7 +473,6 @@ void apiClient_invoke(apiClient_t    *apiClient,
                                 fprintf(stderr, "%s.%d: ERROR ran out of room for parameters %s=%s\n", 
                                         __func__, __LINE__, keyPair->key, keyPair->value);
                                 free(formString);
-                                curl_easy_cleanup(handle);
                                 return;
                             }
                         }
@@ -669,7 +676,6 @@ void apiClient_invoke(apiClient_t    *apiClient,
         {{/authMethods}}
         {{/hasAuthMethods}}
 
-        curl_easy_cleanup(handle);
         if(formParameters != NULL) {
             free(formString);
             curl_mime_free(mime);
