--- a/modules/openapi-generator/src/main/resources/swift5/Validation.mustache
+++ b/modules/openapi-generator/src/main/resources/swift5/Validation.mustache
@@ -6,13 +6,13 @@
 
 import Foundation
 
-struct StringValidationRule {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} struct StringValidationRule {
     var minLength: Int?
     var maxLength: Int?
     var pattern: String?
 }
 
-struct NumericValidationRule<T: Comparable & Numeric> {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} struct NumericValidationRule<T: Comparable & Numeric> {
     var minimum: T?
     var exclusiveMinimum = false
     var maximum: T?
@@ -20,20 +20,20 @@ struct NumericValidationRule<T: Comparable & Numeric> {
     var multipleOf: T?
 }
 
-enum StringValidationErrorKind: Error {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} enum StringValidationErrorKind: Error {
     case minLength, maxLength, pattern
 }
 
-enum NumericValidationErrorKind: Error {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} enum NumericValidationErrorKind: Error {
     case minimum, maximum, multipleOf
 }
 
-struct ValidationError<T: Error & Hashable>: Error {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} struct ValidationError<T: Error & Hashable>: Error {
     public fileprivate(set) var kinds: Set<T>
 }
 
-struct Validator {
-    static func validate(_ string: String, with rule: StringValidationRule) throws -> String {
+{{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} struct Validator {
+    {{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} static func validate(_ string: String, with rule: StringValidationRule) throws -> String {
         var error = ValidationError<StringValidationErrorKind>(kinds: [])
         if let minLength = rule.minLength, !(minLength <= string.count) {
             error.kinds.insert(.minLength)
@@ -54,7 +54,7 @@ struct Validator {
         return string
     }
 
-    static func validate<T: Comparable & BinaryInteger>(_ numeric: T, with rule: NumericValidationRule<T>) throws -> T {
+    {{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} static func validate<T: Comparable & BinaryInteger>(_ numeric: T, with rule: NumericValidationRule<T>) throws -> T {
         var error = ValidationError<NumericValidationErrorKind>(kinds: [])
         if let minium = rule.minimum {
             if !rule.exclusiveMinimum && minium <= numeric {
@@ -81,7 +81,7 @@ struct Validator {
         return numeric
     }
 
-    static func validate<T: Comparable & FloatingPoint>(_ numeric: T, with rule: NumericValidationRule<T>) throws -> T {
+    {{#nonPublicApi}}internal{{/nonPublicApi}}{{^nonPublicApi}}public{{/nonPublicApi}} static func validate<T: Comparable & FloatingPoint>(_ numeric: T, with rule: NumericValidationRule<T>) throws -> T {
         var error = ValidationError<NumericValidationErrorKind>(kinds: [])
         if let minium = rule.minimum {
             if !rule.exclusiveMinimum && minium <= numeric {
