#14141 Add externalDocs to @Operation to the JavaSpring generator : fix mustache template with #hasExternalDocs

--- a/modules/openapi-generator/src/main/resources/JavaSpring/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/api.mustache
@@ -16,9 +16,9 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
-{{#hasAuthMethods}}
+{{#hasExternalDocs}}
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
-{{/hasAuthMethods}}
+{{/hasExternalDocs}}
 {{/swagger2AnnotationLibrary}}
 {{#swagger1AnnotationLibrary}}
 import io.swagger.annotations.*;
