Adds minimal support for API Key header

--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
@@ -5,8 +5,10 @@
 {{#operation}}
 
 ### {{#summary}}{{summary}}{{/summary}}
+{{#notes}}### {{notes}}{{/notes}}
 # @name {{operationId}}
 {{httpMethod}} {{basePath}}{{#lambda.doubleMustache}}{{path}}{{/lambda.doubleMustache}}
+{{#authMethods}}{{#isApiKey}}{{keyParamName}}: {{=<% %>=}}{{<% type %>}}<%={{ }}=%>{{/isApiKey}}{{/authMethods}}
 {{#consumes}}Content-Type: {{{mediaType}}}{{/consumes}}
 
 {{/operation}}
