--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/http-client.env.json.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/http-client.env.json.mustache
@@ -2,6 +2,9 @@
   "dev" : {
     {{#distinctPathParameters}}    "{{paramName}}": "test",
     {{/distinctPathParameters}}
+    {{#distinctAuthMethods}}
+        "{{type}}": "test",
+    {{/distinctAuthMethods}}
     "todo": "remove last comma"
   }
 }
