Java: Add support for custom repositories
This allows to retrieve dependencies from a custom repository, which
is useful when the parent is in a private repository.
The repository's ID, name and URL must be provided.
This information is added to the generated `pom.xml`.

--- a/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/pom.mustache
@@ -349,4 +349,13 @@
         {{/useBeanValidation}}
         <junit-version>4.13.2</junit-version>
     </properties>
+{{#customRepository}}
+    <repositories>
+        <repository>
+            <id>{{{customRepositoryId}}}</id>
+            <name>{{{customRepositoryName}}}</name>
+            <url>{{{customRepositoryUrl}}}</url>
+        </repository>
+    </repositories>
+{{/customRepository}}
 </project>
