--- a/modules/openapi-generator/src/main/resources/Java/libraries/microprofile/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/microprofile/pom.mustache
@@ -172,6 +172,13 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+{{#customRepository}}
+    <repository>
+      <id>{{{customRepositoryId}}}</id>
+      <name>{{{customRepositoryName}}}</name>
+      <url>{{{customRepositoryUrl}}}</url>
+   </repository>
+{{/customRepository}}
   </repositories>
   <properties>
     <java.version>1.8</java.version>
