--- a/modules/openapi-generator/src/main/resources/JavaInflector/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaInflector/pom.mustache
@@ -156,6 +156,13 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+{{#customRepository}}
+        <repository>
+            <id>{{{customRepositoryId}}}</id>
+            <name>{{{customRepositoryName}}}</name>
+            <url>{{{customRepositoryUrl}}}</url>
+       </repository>
+{{/customRepository}}
     </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
