--- a/modules/openapi-generator/src/main/resources/JavaVertXServer/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaVertXServer/pom.mustache
@@ -88,4 +88,13 @@
             </plugin>
         </plugins>
     </build>
+{{#customRepository}}
+    <repositories>
+        <repository>
+            <id>{{{customRepositoryId}}}</id>
+            <name>{{{customRepositoryName}}}</name>
+            <url>{{{customRepositoryUrl}}}</url>
+        </repository>
+    </repositories>
+{{/customRepository}}
 </project>
