--- a/modules/openapi-generator/src/main/resources/java-micronaut/common/configuration/pom.xml.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/common/configuration/pom.xml.mustache
@@ -35,6 +35,13 @@
             <id>central</id>
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
+{{#customRepository}}
+        <repository>
+            <id>{{{customRepositoryId}}}</id>
+            <name>{{{customRepositoryName}}}</name>
+            <url>{{{customRepositoryUrl}}}</url>
+        </repository>
+{{/customRepository}}
     </repositories>
 
     <dependencies>
