--- a/modules/openapi-generator/src/main/resources/java-msf4j-server/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/java-msf4j-server/pom.mustache
@@ -81,6 +81,13 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+{{#customRepository}}
+    <repository>
+      <id>{{{customRepositoryId}}}</id>
+      <name>{{{customRepositoryName}}}</name>
+      <url>{{{customRepositoryUrl}}}</url>
+    </repository>
+{{/customRepository}}
   </repositories>
   <properties>
     <java.version>1.8</java.version>
