--- a/modules/openapi-generator/src/main/resources/java-undertow-server/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/java-undertow-server/pom.mustache
@@ -232,5 +232,12 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+{{#customRepository}}
+        <repository>
+            <id>{{{customRepositoryId}}}</id>
+            <name>{{{customRepositoryName}}}</name>
+            <url>{{{customRepositoryUrl}}}</url>
+       </repository>
+{{/customRepository}}
     </repositories>
 </project>
